6701459: Synchronization bug pattern found in javax.management.relation.RelationService
Fixed this and many other problems found by FindBugs.

Reviewed-by: dfuchs